# workshop-productivity

./: .clang-format  .clang-tidy  CMakeLists.txt  Dockerfile  README.md  Workshop.md  docker-compose.yml  main.cpp
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: cpp-liner.yml  run-tests.yml
docker/: Dockerfile  Makefile
src/: CMakeLists.txt  Exception.hpp  LinearSolver.cpp  LinearSolver.hpp  Utils.cpp  Utils.hpp
tests/: main.cpp
